[package]
name = "include-lua-macro"
description = "Contains the implementation of the include_lua! procedural macro for the crate include-lua."
version = "0.1.1"
repository = "https://github.com/AlphaModder/include-lua"
license = "MIT"
authors = ["AlphaModder"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
walkdir = "2.2"
proc-macro-hack = "0.5.4"
